@@ -1,7 +1,7 @@
 
 PFUNIT VERSION 3.1 INSTALLATION AND BASIC USAGE GUIDE
 
-VERSION 2015-0420 M. Rilee mike@rilee.net
+VERSION 2015-0508 M. Rilee mike@rilee.net
 
 TABLE OF CONTENTS
 
@@ -28,7 +28,7 @@ linux-based systems.  A preliminary Windows/CYGWIN port has been
 contributed by a user. Full use of the system depends on the following
 being available.
 
-Fortran 2003+ (Tested with Intel 13.1+, NAG 6.0, GCC 4.8.3, 4.9.+, IBM's XLF, PGI 15.1)
+Fortran 2003+ (Tested with Intel 14+, NAG 6.0, GCC 4.9.+, IBM's XLF, PGI 15.4)
 The Message Passing Interface (MPI)
 OPENMP
 GNU Make
@@ -506,6 +506,7 @@ TBD
 
 14. REVISIONS TO THIS DOCUMENT
 
+2015-0508 Some PGI workarounds removed for PGI 15.4. MLR
 2015-0420 Clarified PFUNIT_MAX_ARRAY_RANK note. MLR
 2015-0320 PGI port workarounds, including examples. 3.1. MLR
 2014-1211 Minor updates for 3.0.2. MLR
