@@ -5,9 +5,9 @@ program main
 #ifdef USE_MPI
    include 'mpif.h'
 #endif
-#ifdef PGI
-   type(TestSuite) :: suite2
-#endif
+!xxx #ifdef PGI
+!xxx    type(TestSuite) :: suite2
+!xxx #endif
    type (TestSuite) :: all
    class(BaseTestRunner), allocatable :: runner
 
@@ -278,14 +278,14 @@ contains
       suite = newTestSuite()
 
    ! accumulate tests in top suite
-#ifdef PGI
-! Work around PGI compiler internal compiler error
-#define ADD_TEST_SUITE(s) suite2=s();call suite%addTest(suite2)
-#define ADD_MODULE_TEST_SUITE(s) suite2=s();call suite%addTest(suite2)
-#else
+!xxx #ifdef PGI
+!xxx ! Work around PGI compiler internal compiler error
+!xxx #define ADD_TEST_SUITE(s) suite2=s();call suite%addTest(suite2)
+!xxx #define ADD_MODULE_TEST_SUITE(s) suite2=s();call suite%addTest(suite2)
+!xxx #else
 #define ADD_TEST_SUITE(s) call suite%addTest(s())
 #define ADD_MODULE_TEST_SUITE(m,s) call suite%addTest(s())
-#endif
+!xxx #endif
 #include "testSuites.inc"
 #undef ADD_TEST_SUITE
 #undef ADD_MODULE_TEST_SUITE
